--- a/Project/Podfile
+++ b/Project/Podfile
@@ -1,3 +1,3 @@
 platform :ios, '7.0'
 
-pod "EPSReactiveTableViewController", :path => "../EPSReactiveTableViewController.podspec"
+pod "EPSReactiveList", :path => "../EPSReactiveList.podspec"
